<resources>
    <string name="app_name">WPI Directory</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">"About WPI Directory"</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="wpi_logo">wpi_logo</string>
    <string name="search_directory">Search Directory</string>
    <string name="person">Person:</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="title">Title:</string>
    <string name="department">Department:</string>
    <string name="groups">Groups to search:</string>
    <string name="students">Students</string>
    <string name="alumni">Alumni</string>
    <string name="staff">Staff</string>
    <string name="faculty">Faculty</string>
    <string name="search">Search</string>
    <string name="about_wpi_directory_app">About WPI Directory app</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="app_version">Version 1.12</string>
    <string name="about_app_message_1">This is a simple app that communicates with the WPI website to retrieve data and is created for purely educational purposes. The developer for this application did not create or participate in the creation of the WPI Directory search engine.</string>
    <string name="ask_user_rating">If you like this app, be sure to give it a 5 star rating and help this noob developer out.</string>
    <string name="title_activity_send_email">SendEmailActivity</string>
    <string name="send_mail_label">Search Directory: Send mail</string>
    <string name="mail_subject">Subject:</string>
    <string name="mail_message_label">Body/Message:</string>
    <string name="send_mail_button_text">Send</string>
    <string name="send_mail_header">Select Mail Recipient(s)</string>
    <string name="long_press_hint">*Hint* Long press on a result to select it as an email receiver.</string>
    <string name="initial_selected">0 receivers selected</string>
    <string name="invalid_search">Invalid Search</string>
    <string name="be_more_specific">Please be more specific</string>
    <string name="enter_data">Please enter data</string>
    <string name="email_client_hint">*Hint* If possible, choose Gmail as the email client after touching the send button.</string>
    <string name="no_name">No name was found</string>
    <string name="result_image">Result Image</string>
</resources>
