<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="adonay.wpidirectory.SearchResultActivity"
    tools:showIn="@layout/activity_search_result">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wpi_logo"
        android:src="@drawable/wpi_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/wpi_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_directory"
        android:id="@+id/label1"
        android:textColor="#c51431"
        android:textStyle="bold"
        android:layout_below="@+id/wpi_logo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_press_hint"
        android:id="@+id/long_press_hint"
        android:textColor="#626567"
        android:layout_below="@+id/label1"
        android:textSize="12sp"/>

    <ListView
        android:id="@+id/resultList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/long_press_hint"
        android:choiceMode="multipleChoice"
        android:fillViewport="true" />


</RelativeLayout>
